[package]
name = "convolution"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
ndarray = "0.13"
ndarray-rand = "0.11"


[dev-dependencies]
show-image = {version = "0.6", features = ["image"]}
