[package]
name = "convolution"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
ndarray = "0.14"
ndarray-rand = "0.13"
serial_test = "0.5"
rand_isaac = "0.3.0"

[dev-dependencies]
show-image = {version = "0.6", features = ["image"]}
